--- a/plugins/Gk0Wk/TW5-CodeMirror-Enhanced/i18n/zh-Hans.json
+++ b/plugins/Gk0Wk/TW5-CodeMirror-Enhanced/i18n/zh-Hans.json
@@ -41,31 +41,146 @@
   "tw-snippet": {
     "blockquoteSingleline": {
       "name": "单行块引用",
-      "preview": "!! 单行块引用\n> 引用的文本\n> 另一行引号文本\n!! 你也可以像这样嵌套引号\n> 一个引文\n>> 一个副引文\n> 另一个引文\n!! 你也可以将块状引号与其他列表项混合\n* 清单一\n** 清单二\n**> 一个引文\n**> 另一个引文\n*清单三"
+      "preview": [
+        "!! 单行块引用",
+        "",
+        "> 引用的文本",
+        "> 另一行引号文本",
+        "",
+        "!! 你也可以像这样嵌套引号",
+        "",
+        "> 一个引文",
+        ">> 一个副引文",
+        "> 另一个引文",
+        "",
+        "!! 你也可以将块状引号与其他列表项混合",
+        "",
+        "* 清单一",
+        "** 清单二",
+        "**> 一个引文",
+        "**> 另一个引文",
+        "* 清单三"
+      ]
     },
     "blockquote": {
       "name": "块引用",
-      "preview": "!! 多行块引用\n\n<<<\n这是一个块引用段落\n\n写了两行中文\n<<<"
+      "preview": ["!! 多行块引用", "", "<<<", "这是一个块引用段落", "", "写了两行中文", "<<<"]
     },
     "blockquoteWithCSSClass": {
       "name": "带CSS类的块引用",
-      "preview": "!! CSS 类也可以加到引用里\n\n<<<.tc-big-quote\n一个戏剧性的引用\n<<< 一个重要的人"
+      "preview": ["!! CSS 类也可以加到引用里", "", "<<<.tc-big-quote", "一个戏剧性的引用", "<<< 一个重要的人"]
     },
     "blockquoteCitation": {
       "name": "带引文来源的块引用",
-      "preview": "!! 一个引文来源也可以加到引用里\n\n<<<\n计算机就像我们思想的自行车\n<<< 史蒂夫-乔布斯"
+      "preview": ["!! 一个引文来源也可以加到引用里", "", "<<<", "计算机就像我们思想的自行车", "<<< 史蒂夫-乔布斯"]
     },
     "codeblock": {
       "name": "代码块",
-      "preview": "!! 你可以使用三个反斜线<code>&#96;&#96;&#96;</code>来标记代码块\n\n```\n这将是以等宽字体显示的。\n```\n\n为了正确显示，这三个反斜线需要在行的开头，并紧跟一个换行。\n\n请注意，任何前面的段落内容也应该用双倍的换行符来适当终止。因此，下面这个例子是错误的。\n<pre>\n这是一个普通的段落\n&#96;&#96;&#96;\n这将是以等宽字体显示的。\n&#96;&#96;&#96;\n</pre>\n\n正确的版本是。\n<pre>\n这是一个普通的段落\n\n&#96;&#96;&#96;\n这将是以等宽字体显示的。\n&#96;&#96;&#96;\n</pre>\n\n注意，有些键盘布局将反斜线视为[[死键|https://en.wikipedia.org/wiki/Dead_key]]，使其难以输入。诀窍是输入三个反斜线，然后是一个空格。或者，一次性输入所有六个回车键，然后是一个空格，然后将光标向后移动三个字符来输入或粘贴内容。\n\n"
+      "preview": [
+        "!! 你可以使用三个反斜线<code>&#96;&#96;&#96;</code>来标记代码块",
+        "",
+        "```",
+        "这将是以等宽字体显示的。",
+        "```",
+        "",
+        "为了正确显示，这三个反斜线需要在行的开头，并紧跟一个换行。",
+        "",
+        "请注意，任何前面的段落内容也应该用双倍的换行符来适当终止。因此，下面这个例子是错误的。",
+        "<pre>",
+        "这是一个普通的段落",
+        "&#96;&#96;&#96;",
+        "这将是以等宽字体显示的。",
+        "&#96;&#96;&#96;",
+        "</pre>",
+        "",
+        "正确的版本是。",
+        "<pre>",
+        "这是一个普通的段落",
+        "",
+        "&#96;&#96;&#96;",
+        "这将是以等宽字体显示的。",
+        "&#96;&#96;&#96;",
+        "</pre>",
+        "",
+        "注意，有些键盘布局将反斜线视为[[死键|https://en.wikipedia.org/wiki/Dead_key]]，使其难以输入。",
+        "诀窍是输入三个反斜线，然后是一个空格。或者，一次性输入所有六个回车键，然后是一个空格，然后将光标向后移动三个字符来输入或粘贴内容。"
+      ]
+    },
+    "dash": {
+      "name": "破折号",
+      "preview": ["!! 插入破折号", "", "您可以用 -- 生成一个 n-dash 字符、--- 生成一个 m-dash。", "例如 – 这是一个例子 — 这个也是"]
+    },
+    "definitions": {
+      "name": "定义清单",
+      "preview": [
+        "!! 插入定义清单",
+        "",
+        "以此语法创建 HTML 定义清单：",
+        "",
+        "```tw5",
+        "; Term being defined",
+        ": Definition of that term",
+        "; Another term",
+        ": Another definition",
+        "```",
+        "",
+        "显示结果：",
+        "",
+        "```",
+        "Term being defined",
+        "    Definition of that term",
+        "Another term",
+        "    Another definition",
+        "```",
+        "",
+        "HTML 标记：",
+        "",
+        "```html",
+        "<dl><dt>Term being defined</dt><dd>Definition of that term</dd><dt>Another term</dt><dd>Another definition</dd></dl>",
+        "```"
+      ]
+    },
+    "codeinline": {
+      "name": "内联代码",
+      "preview": [
+        "!! 输入内联代码",
+        "",
+        "<code>&#96;反引号&#96;</code> 用于 `代码`",
+        "",
+        "* 另外，<code>&#96;&#96;连续两个反引号则为 &#96;可嵌入&#96; 反引号&#96;&#96;</code>"
+      ]
+    },
+    "bold": {
+      "name": "粗体",
+      "preview": ["!! 输入粗体", "", "`''粗体''` 显示 ''粗体字''"]
+    },
+    "italic": {
+      "name": "斜体",
+      "preview": ["!! 输入斜体", "", "`//斜体//` 显示 //斜体字//"]
+    },
+    "underline": {
+      "name": "下划线",
+      "preview": ["!! 输入下划线", "", "`__下划线__` 显示 __下划线__"]
+    },
+    "superscript": {
+      "name": "上标",
+      "preview": ["!! 输入上标", "", "`^^上标^^` 显示 ^^上标^^字"]
+    },
+    "subscript": {
+      "name": "下标",
+      "preview": ["!! 输入下标", "", "`,,下标,,` 显示 ,,下标,,字"]
+    },
+    "deleteStrikeThrough": {
+      "name": "删除线",
+      "preview": ["!! 输入删除线", "", "`~~删除线~~` 显示 ~~删除文本~~"]
     },
     "image": {
       "name": "图片",
-      "preview": "!! 插入图片\n\n[img[$:/favicon.ico]]"
+      "preview": ["!! 插入图片", "", "[img[$:/favicon.ico]]"]
     },
     "center": {
       "name": "居中",
-      "preview": "!! 居中元素\n\n<center>就像这样</center>"
+      "preview": ["!! 居中元素", "", "<center>就像这样</center>"]
     }
   }
 }
